adding the flexbox for the welcome section (2nd)
saving in case of major error

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     align-items:center;
     justify-content:space-around;
     padding:15px;
-    font-weight:lighter;
+    font-weight:light
 }
 
 .headerLinks {
@@ -40,4 +40,18 @@ a {
     color:white;
     text-decoration:none;
     
+}
+
+.content {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+.img .text {
+    flex: 1 1 auto;
+}
+
+.img {
+    background-color:#E5E7EB;
 }
