--- a/style.css
+++ b/style.css
@@ -39,6 +39,22 @@ button {
 a {
     color:white;
     text-decoration:none;
-    
 }
 
+.content {
+    display:flex;
+    flex-direction:column;
+}
+
+.welcome {
+    display:flex;
+    align-items:center; 
+    justify-content:center;
+}
+
+.img {
+    min-width:30px;
+    min-height:30px;
+    background-color:grey;
+    padding:20px;
+}
