set all sections to justify-content, w/o cleanup
attempts to fix the broken setup currently

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     font-weight:lighter;
 }
 
+.header, .content, .info, .banner, .quote, .footer {
+    display:flex;
+    justify-content: space-around;
+}
+
 .headerLinks {
     display:flex;
     gap:16px;
