--- a/style.css
+++ b/style.css
@@ -14,9 +14,16 @@
     color: white;
     padding:15px;
     font-weight:lighter;
+    flex-direction:column;
+    align-items:center;
 }
 
 .header, .content, .info, .banner, .quote, .footer {
+    display:flex;
+    justify-content: space-around;
+}
+
+.header-bar {
     display:flex;
     justify-content: space-around;
 }
@@ -26,14 +33,14 @@
     gap:16px;
 }
 
-.header > p {
+.header-bar > p {
     font-weight:bold;
 }
 
 button {
     color:white;
     background-color:#3882F6;
-    border-radius:7.5px;
+    border-radius:7.5px;    
     border-style:none;
     padding:5px 15px;
     
@@ -49,7 +56,7 @@ a {
     flex-direction:column;
 }
 
-.welcome {
+.welcome-section {
     gap:40px;
     display:flex;
     justify-content:space-around;
