--- a/style.css
+++ b/style.css
@@ -108,12 +108,41 @@ html, body {
 .info-section {
     display:flex;
     flex-direction:column;
-    justify-content:space-around;
+    justify-content:flex-start;
     align-items:center;
+    padding:3% 0;
+    gap:45px;
 }
 
 .info-section > p { 
     font-size: 36px;
     font-weight:bolder;
     color:#1F2937;
+}
+
+.info-section > div {
+    display:flex;
+    gap:7%;
+    justify-content:center;
+}
+
+.info-box {
+    width:200px;
+    display:flex;
+    flex-direction:column;
+    gap:5px;
+}
+
+.info-box > div {
+    height:200px;
+    width:200px;
+    border: 3px solid #3882F6;
+    border-radius:15px;
+}
+
+.info-box > p {
+    text-align:center;
+    font-weight:normal;
+    color:#747474;
+    font-size:18px;
 }
