--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
     color:white;
     border-style:none;
     border-radius:7.5px;
-    padding: 5px 25px;
+    padding: 10px 35px;
 }
 
 html, body {
@@ -148,5 +148,56 @@ html, body {
 }
 
 .quote-section {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
     background-color:#E5E7EB;
+    padding:0px 25%;
+    gap:10px;
+}
+
+.quote-section > em {
+    font-style:italic;
+    font-size:36px;
+    font-weight:lighter;
+    color:#1F2937;
+}
+
+.quote-section > p {
+    font-weight:bold;
+    font-size:17px;
+    align-self:flex-end;
+}
+
+.banner-section > div {
+    background-color:#3882F6;
+    height:150px;
+    width:70%;
+    border-radius:7.5px;
+    display:flex;
+    align-items:center;
+    justify-content:space-around;
+    color:white;
+}
+
+.banner-section > div > button{
+    border:1px solid white;
+}
+
+.banner-section {
+    display:flex;
+    align-items:center;
+    justify-content: center;
+}
+
+.banner-section > div > div > p:first-child {
+    font-weight:bold;
+    font-size: 21px;
+}
+
+.footer-section {
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
